--- a/doc/ekf.tex
+++ b/doc/ekf.tex
@@ -274,6 +274,50 @@ and
 \end{equation}
 
 
+\section{Magnetometer Measurements}
+Magnetometer is used to update the orientation states of the filter based on the known vector for the magnetic field in global coordinates
+\begin{equation}
+  a = \begin{pmatrix}
+  a_x \\
+  a_y \\
+  a_z \end{pmatrix}
+\end{equation}
+
+The measurements (in robocentric coordinates) are functions of the known magnetic field and phi, theta, and psi
+\begin{equation}
+	h(x,u) = \begin{pmatrix}
+	m_x \\
+	m_y \\
+	m_z \end{pmatrix}
+  = \begin{pmatrix}
+	a_x\ct\cs + a_y(\sip\sit\cs - \cp\sis) + a_z(\cp\sit\cs + \sip\sis) \\
+	a_x\ct\sis + a_y(\sip\sit\sis + \cp\cs) + a_z(\cp\sit\sis - \sip\cs) \\
+	-a_x\sit + a_y\sip\ct + a_z\cp\ct \end{pmatrix}
+\end{equation}
+
+Therefore
+\begin{equation}
+	\makebox[\textwidth][c]{$
+	\tfrac{\partial h}{\partial x} = \begin{pmatrix}
+	% position			 velocity 			angle 				                alphas			  betas
+		0 & 0 & 0 &    0 & 0 & 0 &    C_{06} & C_{07} & C_{08} &    0 & 0 & 0 &   0 & 0 & 0 \\
+		0 & 0 & 0 &    0 & 0 & 0 &    C_{16} & C_{17} & C_{18} &    0 & 0 & 0 &   0 & 0 & 0 \\
+		0 & 0 & 0 &    0 & 0 & 0 &    C_{26} & C_{27} & 0      &    0 & 0 & 0 &   0 & 0 & 0 \end{pmatrix}
+		$}
+\end{equation}
+with
+\begin{equation}
+	\begin{aligned}
+		C_{06} &= a_y(\cp\sit\cs + \sip\sis) + a_z(-\sip\sit\cs + \cp\sis) \\
+		C_{07} &= -a_x\sit\cs + a_y\sip\ct\cs + a_z\cp\ct\cs \\
+		C_{08} &= -a_x\ct\sis + a_y(-\cp\cs - \sip\sit\sis) + a_z(\sip\cs - \cp\sit\sis) \\
+		C_{16} &= a_y(-\sip\cs + \cp\sit\sis) + a_z(-\cp\cs - \sip\sit\sis) \\
+		C_{17} &= -a_x\sit\sis + a_y\sip\ct\sis + a_z\cp\ct\sis \\
+		C_{18} &= a_x\ct\cs + a_y(\sip\sit\cs - \cp\sis) + a_z(\cp\sit\cs + \sip\sis) \\
+		C_{26} &= a_y\cp\ct - a_z\sip\ct \\
+		C_{27} &= -a_x\ct - a_y\sip\sit - a_z\cp\sit \\
+  \end{aligned}
+\end{equation}
 
 
 
